# lang-chain-and-graph

./: README.md  pyproject.toml
chatbot/notebook/: chatbot.ipynb
langchain-academy/module-0/: basics.ipynb
langchain-academy/module-1/: 01_simple-graph.ipynb
